@@ -20,7 +20,8 @@ analyzeFolder(myfolder, htmlPlots = TRUE, verbose = TRUE,
   interpolCert = 0.3, pathfinding = c("none", "fast", "slow")[2],
   annealPars = list(maxit = 5000, temp = 1000), certWeight = 0.5,
   snakeStep = 0.05, snakePlot = FALSE, smooth = 1,
-  smoothVars = c("pitch", "dom"), summary = TRUE, plot = FALSE,
+  smoothVars = c("pitch", "dom"), summary = TRUE,
+  summaryStats = c("mean", "median", "sd"), plot = FALSE,
   savePlots = FALSE, savePath = NA, plotSpec = TRUE,
   specPlot = NULL, pitchPlot = list(col = rgb(0, 0, 1, 0.75), lwd = 3),
   candPlot = list(levels = c("autocor", "spec", "dom", "cep"), col =
@@ -206,12 +207,15 @@ deviation of ~4 semitones. To disable, set \code{smooth} to NULL}
 variables (mean, median and SD). If FALSE, returns a list containing
 frame-by-frame values}
 
+\item{summaryStats}{a vector of names of functions used to summarize each
+acoustic characteristic}
+
 \item{plot}{if TRUE, produces a spectrogram with pitch contour overlaid}
 
 \item{savePlots}{if TRUE, saves plots as .jpg files}
 
-\item{savePath}{if a valid path is specified, a plot is saved in this
-folder (defaults to NA)}
+\item{savePath}{if a valid path is specified, a plot is saved in this folder
+(defaults to NA)}
 
 \item{plotSpec}{if \code{FALSE}, the spectrogram will not be plotted}
 
