@@ -4,7 +4,8 @@ NEW FUNCTIONS:
   * getLoudness(): estimates subjective loudness per frame, in sone
 
 MINOR:
-  * analyze(): also returns loudness per frame, in sone (new arguments: SPL_measured and Pref)
+  * analyze(), analyzeFolder(): also returns loudness per frame, in sone (new arguments: SPL_measured and Pref)
+  # analyze(), analyzeFolder(): new argument "summaryStats" for specifying how to summarize the output (mean, sd, etc.)
   * ssm(): new argument "padWith" for dealing with edges and "heights" for controlling relative plot sizes
   * soundgen_app(): fixed a bug introduced in 1.3.0 that caused the app to crash when switching to a new preset
 
